Fix for HR overflowing mobile screen

--- a/css/7.84-bootstrap-landing-page.css
+++ b/css/7.84-bootstrap-landing-page.css
@@ -26,6 +26,7 @@ h1 {
 
 hr {
   width: 400px;
+  max-width: 90%;
   border-top: 1px solid #f8f8f8;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
